Register Batch 53 (5 shops) and update Hanam Bokkwonbang data (6-win consolidation)

--- a/index.html
+++ b/index.html
@@ -2559,7 +2559,7 @@
             { name: "대박슈퍼", addr: "인천 부평구 경원대로", panoId: 1199058573, pov: { pan: 177.81, tilt: -2.27, zoom: 1 } },
             { name: "진평양행", addr: "강원 강릉시 임영로", panoId: 1194087150, pov: { pan: 256.26, tilt: -4.05, zoom: -1 } },
             { name: "운좋은날", addr: "서울 강동구 풍성로", panoId: 1198599079, pov: { pan: 11.15, tilt: 3.08, zoom: -1 } },
-            { name: "바이더웨이녹번중앙점", addr: "서울 은평구 녹번동 155-20", isClosed: true },
+            { name: "바이더웨이녹번중앙점", addr: "서울 은평구 녹번동", panoid: 1197941920, pov: { pan: 7.17, tilt: 4.71, zoom: 2 } },
             { name: "포항오거리CU복권", addr: "경북 포항시 북구", panoId: 1187938840, pov: { pan: 54.87, tilt: 4.18, zoom: 0 } },
             { name: "꾸미로또복권", addr: "서울 강북구 솔샘로67길", panoId: 1197848380, pov: { pan: 106.79, tilt: 4.54, zoom: 0 } },
             { name: "복권전문점", addr: "경기 시흥시 중심상가로", panoId: 1176040872, pov: { pan: 38.81, tilt: 7.94, zoom: 0 } },
@@ -2572,7 +2572,7 @@
             { name: "해뜰날", addr: "경기 동두천시 중앙로", panoId: 1175647022, pov: { pan: 167.43, tilt: 0.87, zoom: 0 } },
             { name: "노다지복권방", addr: "경기 용인시 처인구 마평동 735-1", panoId: 1198953144, pov: { pan: 126.6, tilt: 2.2, zoom: 2 } },
             { name: "GS25(계산동경점)", addr: "인천 계양구 계산동", panoId: 1199190145, pov: { pan: 312.16, tilt: -5.08, zoom: 0 } },
-            { name: "창원병원앞매표소", addr: "경남 창원시 성산구 중앙동 104-1 가판", panoId: 1204481691, pov: { pan: 37.1, tilt: 9.5, zoom: 0 } },
+            { name: "창원병원앞매표소", addr: "경남 창원시 성산구", panoid: 1204481691, pov: { pan: 36.51, tilt: 4.43, zoom: 2 } },
             { name: "역전광장상회", addr: "경기 파주시 금촌1동 329-19", panoId: 1203271882, pov: { pan: 332.7, tilt: 5.0, zoom: 0 } },
             { name: "대광복권방", addr: "전남 화순군 화순읍 대리 97-3", panoId: 1192902741, pov: { pan: 339.4, tilt: 4.4, zoom: 0 } },
             { name: "명당골복권방", addr: "경기 수원시 권선구", panoId: 1199751659, pov: { pan: 187.22, tilt: 5.79, zoom: -3 } },
@@ -2583,7 +2583,7 @@
             { name: "파란만장복권방", addr: "경기 화성시 진안동", panoId: 1198278713, pov: { pan: 156.78, tilt: -2.10, zoom: 3 } },
             { name: "황실복권방", addr: "충남 천안시 동남구", panoId: 1193993670, pov: { pan: 346.95, tilt: 4.35, zoom: 3 } },
             { name: "GS25(대전시네마점)", addr: "대전 서구 괴정동", panoId: 1201429942, pov: { pan: 132.97, tilt: 5.70, zoom: -3 } },
-            { name: "로또복권역전점", addr: "경북 경주시 노서동(중부동)", panoId: 1187221443, pov: { pan: 70.95, tilt: 1.86, zoom: -3 } },
+            { name: "로또복권역전점", addr: "경북 경주시 노서동", panoid: 1187221443, pov: { pan: 58.22, tilt: -0.16, zoom: 0 } },
             { name: "셀프카메라", addr: "부산 부산진구 개금동", panoId: 1202587961, pov: { pan: 100.14, tilt: -0.54, zoom: -3 } },
             { name: "올인(allin)", addr: "경기 화성시 향남읍", panoId: 1197247800, pov: { pan: 301.07, tilt: 9.93, zoom: -3 } },
             { name: "로또복권방", addr: "경기 용인시 처인구", panoId: 1199530907, pov: { pan: 306.53, tilt: 1.09, zoom: 0 } },
@@ -2617,6 +2617,7 @@
             { name: "가로가판대", addr: "서울 관악구 신림동(조원동) 1643-6" },
             { name: "가로판매대", addr: "서울 강동구 올림픽로 648 천호역 3번 출구 앞(가판점)" },
             { name: "가로판매점", addr: "서울 용산구 원효로 179", panoid: 1197440869, pov: { pan: 297.07, tilt: -5.58, zoom: -2 }, customMessage: "신한은행(ATM) 옆 가판점입니다. (주차부스 바로 옆 확인)" },
+            { name: "고덕로또복권", addr: "서울 강동구 상일로15길 18 1층 (상일동역 4번 출구)", panoid: 1198588621, pov: { pan: 4.14, tilt: 4.14, zoom: 1 }, customMessage: "고덕로 397에서 이전한 6회 당첨 명당입니다." },
             { name: "가로판매대", addr: "서울 종로구 교남동", panoid: 1201585664, pov: { pan: 87.39, tilt: 13.86, zoom: -2 } },
             { name: "가자복권천국", addr: "전남 목포시 상동", panoid: 1192597069, pov: { pan: 352.61, tilt: -0.23, zoom: 3 } },
             { name: "가든호텔정문옆가판", addr: "서울 마포구 도화동 169-1", panoid: 1197820704, pov: { pan: 109.3, tilt: -0.9, zoom: 0 } },
@@ -2674,9 +2675,9 @@
             { name: "로또로복권", addr: "전북 전주시 완산구 평화동2가 4729", panoid: 1172287937, pov: { pan: 293.02, tilt: -1.94, zoom: -3 } },
             { name: "로또매점", addr: "충남 당진시 송산면 유곡리 876-2", panoid: 1172172781, pov: { pan: 276.95, tilt: 4.01, zoom: 0 } },
             { name: "로또명당", addr: "경기 시흥시 신현로 21-1 101호", panoid: 1175428410, pov: { pan: 141.2, tilt: -1.0, zoom: 1 } },
-            { name: "로또명당", addr: "인천 미추홀구 문학동 355-12 1층", panoid: 1200600347, pov: { pan: 297.51, tilt: 5.61, zoom: -3 } },
+            { name: "로또명당", addr: "인천 남구 문학동", panoid: 1200600347, pov: { pan: 254.27, tilt: 7.89, zoom: 0 } },
             { name: "로또복권", addr: "경북 김천시 신음동 462-24", panoid: 1165059457, pov: { pan: 21.12, tilt: -1.34, zoom: -3 } },
-            { name: "로또복권", addr: "경기 화성시 송산면 사강리 694-4", panoid: 1196583182, pov: { pan: 248.08, tilt: 0.32, zoom: -3 } },
+            { name: "로또복권", addr: "경기 화성시 송산면", panoid: 1198585012, pov: { pan: 181.41, tilt: 4.46, zoom: -1 } },
             { name: "로또복권 하대점", addr: "경남 진주시 하대동 188", panoid: 1193106643, pov: { pan: 82.61, tilt: 1.05, zoom: -3 } },
             { name: "로또복권방", addr: "경기 가평군 가평읍 읍내리 448-3", panoid: 1175611447, pov: { pan: 14.37, tilt: 5.66, zoom: -3 } },
             { name: "로또복권장항점", addr: "충남 서천군 장항읍 창선리 632-2", isClosed: true, customMessage: "현재 폐업 상태로 장항 지역의 다른 명당(1등명당 등)을 이용해 주세요." },
@@ -2694,6 +2695,15 @@
             { name: "현대사", addr: "경기 성남시 분당구 미금일로 77", panoid: 1198797713, pov: { pan: 178.56, tilt: 1.66, zoom: 2 } },
             { name: "가로판매점", addr: "서울 서대문구 신촌로 103", panoid: 1198907641, pov: { pan: 114.23, tilt: -0.21, zoom: 0 } },
             { name: "알리바이금당점", addr: "전남 순천시 대석길 44", panoid: 1205278170, pov: { pan: 354.56, tilt: 10.79, zoom: 0 } },
+            { name: "세원로또복권방", addr: "부산 수영구 수영로725번길 53", panoid: 1202601334, pov: { pan: 169.46, tilt: 6.04, zoom: -3 } },
+            { name: "초월대박복권방", addr: "경기 광주시 경충대로 1252", panoid: 1203793227, pov: { pan: 46.47, tilt: 3.95, zoom: 0 } },
+            { name: "경성식품", addr: "서울 동대문구 망우로21길 52", panoid: 1198205251, pov: { pan: 356.19, tilt: 0.06, zoom: 0 } },
+            { name: "복권닷컴", addr: "강원 양양군 양양로 62", panoid: 1196252827, pov: { pan: 352.91, tilt: -4.50, zoom: 0 } },
+            { name: "헬로마트", addr: "서울 도봉구 도봉로170길 8", panoid: 1197897753, pov: { pan: 166.06, tilt: 3.20, zoom: 2 } },
+            { name: "로또명당", addr: "경기 시흥시 신현로 21-1", panoid: 1175428413, pov: { pan: 125.58, tilt: 0.25, zoom: 2 } },
+            { name: "황금복권마트", addr: "경기 이천시 증신로325번길 5", panoid: 1174834139, pov: { pan: 202.46, tilt: -4.78, zoom: 3 } },
+            { name: "로또", addr: "서울 중구 퇴계로86길 42", panoid: 1198788751, pov: { pan: 286.63, tilt: 0.96, zoom: -3 } },
+            { name: "CU(군포덕산점)", addr: "경기 군포시 고산로250번길 32", panoid: 1175428530, pov: { pan: 27.11, tilt: -2.77, zoom: -2 } },
             { name: "롯데무역", addr: "부산 영도구 남항동1가 197-1번지 (꿈나무길 197)", panoid: 1202691794, pov: { pan: 108.98, tilt: 5.95, zoom: -3 } },
             { name: "마이마트", addr: "인천 서구 심곡동 302 한국상가 제1층 101호", panoid: 1199391535, pov: { pan: 182.2, tilt: -3.9, zoom: 0 }, customMessage: "기존 '이마트(인천 심곡)' 명칭으로 알려진 1등 4회 대박 명당입니다." },
             { name: "메가마트", addr: "경기 시흥시 정왕대로 64 메가쇼핑몰 1층 123호", panoid: 1176237881, pov: { pan: 20.5, tilt: -1.3, zoom: 1 } },
@@ -2720,7 +2730,7 @@
             { name: "복권명당", addr: "대전 중구 목중로 47 (중촌동 21-18)", panoid: 1201428533, pov: { pan: 216.8, tilt: 0.7, zoom: 0 }, customMessage: "지번/도로명 주소 분산 기록을 포함하여 총 4회 1등을 배출한 명당입니다." },
             { name: "복권방", addr: "경기 수원시 팔달구 인계로 213 (인계동 1037-2)", panoid: 1199811682, pov: { pan: 176.89, tilt: 1.16, zoom: -2 }, customMessage: "지번/도로명 주소 분산 기록을 포함하여 총 4회 1등을 배출한 인계동 명당입니다." },
             { name: "복권방", addr: "서울 구로구 구로동 409-80 (구로동로35길 6)", panoid: 1198456741, pov: { pan: 299.0, tilt: 3.0, zoom: 3 }, isClosed: true, customMessage: "과거 1등을 3회 배출했으나 현재는 폐점된 매장입니다." },
-            { name: "복권방", addr: "경기 하남시 신장로 122 (신장동 427-169)", panoid: 1173490651, pov: { pan: 27.4, tilt: -6.5, zoom: 0 }, customMessage: "하남 신장동의 대표 명당으로 지번/도로명 분산 기록을 포함하여 총 4회 1등이 배출되었습니다." },
+            { name: "복권방", addr: "경기 하남시 신장로 122", panoid: 1173490651, pov: { pan: 27.4, tilt: -6.5, zoom: 0 }, customMessage: "하남 신장동의 대표 명당으로, 인근 폐점된 지점(2회)과 합산하여 총 6회 1등을 배출한 저력 있는 곳입니다. LG U+ 매장 내에 위치하고 있습니다." },
             { name: "복권방", addr: "강원 원주시 관설동 1702-1", panoid: 1195742103, pov: { pan: 136.5, tilt: 1.6, zoom: 0 } },
             { name: "복권백화점", addr: "경기 여주시 여흥로 115 (홍문동 207-9)", panoid: 1174873101, pov: { pan: 119.17, tilt: 2.34, zoom: -1 } },
             { name: "복권사랑", addr: "경기 양주시 평화로 1421 (덕계동 462-2)", panoid: 1204107039, pov: { pan: 112.71, tilt: 1.11, zoom: 1 } },
