Register Batch 54 (9 shops) with precise POV data

--- a/index.html
+++ b/index.html
@@ -2529,10 +2529,10 @@
             { name: "NG24", addr: "경북 칠곡군 석적읍", panoId: 1166639892, pov: { pan: 332.83, tilt: 10.69, zoom: -2 } },
             { name: "소리창고", addr: "서울 강서구 내발산동", panoId: 1198604052, pov: { pan: 104.79, tilt: 1.68, zoom: -1 } },
             { name: "팡팡복권마트.잡화슈퍼", addr: "전북 전주시 덕진구", panoId: 1171843139, pov: { pan: 340.71, tilt: 2.47, zoom: -1 } },
-            { name: "황금로또", addr: "강원 원주시 태장2동", panoId: 1196038638, pov: { pan: 267.24, tilt: 13.10, zoom: -3 } },
+            { name: "황금로또", addr: "강원 원주시 태장2동 1390-16", panoid: 1196038632, pov: { pan: 222.54, tilt: 1.87, zoom: -3 } },
             { name: "로또복권두정점", addr: "충남 천안시 서북구", panoId: 1195549516, pov: { pan: 4.85, tilt: 6.66, zoom: -3 } },
             { name: "대산슈퍼", addr: "충남 천안시 동남구", panoId: 1193995561, pov: { pan: 182.45, tilt: 4.26, zoom: -2 } },
-            { name: "에스비 상사", addr: "서울 중구 퇴계로86길", panoId: 1198788741, pov: { pan: 77.31, tilt: 3.31, zoom: -3 } },
+            { name: "에스비 상사", addr: "서울 중구 퇴계로86길 29", panoid: 1198788741, pov: { pan: 68.90, tilt: 4.57, zoom: -3 } },
             { name: "청솔서점", addr: "부산 사하구 하신번영로", panoId: 1161907485, pov: { pan: 192.32, tilt: 5.42, zoom: -1 } },
             { name: "대전우표사", addr: "대전 동구 중앙로204번길", panoId: 1163576030, pov: { pan: 55.45, tilt: 1.93, zoom: -3 } },
             { name: "주택복권방", addr: "경기 용인시 수지구", panoId: 1199750326, pov: { pan: 141.11, tilt: 3.85, zoom: 1 } },
@@ -2655,7 +2655,7 @@
             { name: "대박행진복권랜드", addr: "경기 파주시 금촌동 989-1 금촌프라자 107호", panoid: 1045548538, pov: { pan: 166.7, tilt: -1.1, zoom: 0 } },
             { name: "대야지복권", addr: "광주 남구 주월동 961-24", panoid: 1200569355, pov: { pan: 336.8, tilt: -0.3, zoom: 1 } },
             { name: "대영당안경원", addr: "부산 동래구 수안동 232", panoid: 1202730682, pov: { pan: 274.80, tilt: -0.10, zoom: -3 } },
-            { name: "대운복권", addr: "경기 성남시 중원구 성남동 4159", panoid: 1199005732, pov: { pan: 297.9, tilt: -2.2, zoom: 3 } },
+            { name: "대운복권", addr: "경기 성남시 중원구 성남대로 1149", panoid: 1199005721, pov: { pan: 247.83, tilt: 3.95, zoom: 1 } },
             { name: "대흥당", addr: "전북 정읍시 관통로 102", panoid: 1183542559, pov: { pan: 307.0, tilt: 0.9, zoom: 0 } },
             { name: "도깨비", addr: "경기 하남시 서하남로 136", panoid: 1173958844, pov: { pan: 178.97, tilt: 7.88, zoom: -3 } },
             { name: "도소매복권방", addr: "전남 광양시 광영동 759-4", panoid: 1205328614, pov: { pan: 108.57, tilt: 5.52, zoom: -3 } },
@@ -2685,7 +2685,7 @@
             { name: "로또통신", addr: "경남 김해시 외동 1251-1 104호 (함박로101번길 22)", panoid: 1194388308, pov: { pan: 83.23, tilt: -3.87, zoom: -2 } },
             { name: "로또판매점", addr: "경기 포천시 신북면 가채리 23-2", panoid: 1176226525, pov: { pan: 97.77, tilt: 0.82, zoom: -2 } },
             { name: "로또판매점", addr: "충북 음성군 대소면 오산리 533-1", panoid: 1165303745, pov: { pan: 110.98, tilt: 4.60, zoom: -3 } },
-            { name: "로또행운마트", addr: "경남 김해시 삼문동 177번지 (능동로 157)", panoid: 1194480714, pov: { pan: 168.60, tilt: 1.76, zoom: -1 } },
+            { name: "로또행운마트", addr: "경남 김해시 능동로 177 복권판매점", panoid: 1194480714, pov: { pan: 203.39, tilt: -2.23, zoom: 1 } },
             { name: "장미슈퍼", addr: "충남 부여군 계백로 265", panoid: 1178842351, pov: { pan: 265.99, tilt: 9.55, zoom: -3 } },
             { name: "까치복권방", addr: "경기 시흥시 중심상가로 326", panoid: 1176040884, pov: { pan: 216.52, tilt: -1.90, zoom: -3 } },
             { name: "로또복권", addr: "경기 평택시 원평로 55", panoid: 1197645349, pov: { pan: 221.40, tilt: 6.81, zoom: -2 } },
@@ -2812,7 +2812,7 @@
             { name: "수퍼복권대박", addr: "인천 연수구 용담로", panoId: 1200644068, pov: { pan: 201.2, tilt: -4.2, zoom: 0 } },
             { name: "신불당로또", addr: "충남 천안시 서북구", panoId: 1195219571, pov: { pan: 267.81, tilt: -0.01, zoom: 0 } },
             { name: "신영슈퍼", addr: "서울 강남구 광평로51길", panoId: 1198825857, pov: { pan: 11.28, tilt: -0.54, zoom: 0 } },
-            { name: "씨스페이스 어방점", addr: "경남 김해시 인제로170번길", panoId: 1195018029, pov: { pan: 78.25, tilt: 1.62, zoom: -3 } },
+            { name: "씨스페이스 어방점", addr: "경남 김해시 인제로170번길 15-6 편의점 내", panoid: 1195018021, pov: { pan: 46.35, tilt: 5.03, zoom: 1 } },
             { name: "씨유 대전반석역점", addr: "대전 유성구 반석로", panoId: 1200979469, pov: { pan: 21.38, tilt: 1.42, zoom: 0 } },
             { name: "아이러브마트복권방", addr: "울산 중구 유곡로", panoId: 1202037956, pov: { pan: 166.5, tilt: 1.3, zoom: -1 } },
             { name: "알리바이", addr: "광주 광산구 신가동", panoId: 1199874247, pov: { pan: 46.58, tilt: -6.28, zoom: -3 } },
@@ -2858,6 +2858,10 @@
             { name: "형제상회", addr: "대전 서구 용문동", panoId: 1201235032, pov: { pan: 231.57, tilt: 11.75, zoom: -3 } },
             { name: "현대사", addr: "경기 성남시 분당구 구미동 144-1 102호", panoId: 1199011246, pov: { pan: 359.56, tilt: 1.25, zoom: -3 } },
             { name: "행운복권방", addr: "서울 도봉구 창동", panoId: 1197759123, pov: { pan: 334.7, tilt: -0.9, zoom: 0 } },
+            { name: "천하명당초량점", addr: "부산 동구 중앙대로221번길 3", panoid: 1202441096, pov: { pan: 189.21, tilt: 7.73, zoom: -3 } },
+            { name: "선경로또", addr: "충북 제천시용두대로 59", panoid: 1185117093, pov: { pan: 309.50, tilt: -2.42, zoom: 1 } },
+            { name: "바로전산", addr: "경기 광명시 오리로 1000", panoid: 1203338330, pov: { pan: 20.22, tilt: 0.87, zoom: 1 } },
+            { name: "가로판매점", addr: "서울 금천구 시흥대로 480 가판", panoid: 1198112467, pov: { pan: 47.89, tilt: 1.89, zoom: 2 } },
         ];
 
 
