Register Batch 55 (9 shops) and finalize Seocho investigation cleanup

--- a/index.html
+++ b/index.html
@@ -2539,7 +2539,7 @@
             { name: "미나식품(로또판매점)", addr: "서울 강서구 금낭화로", panoId: 1198192808, pov: { pan: 323.87, tilt: -2.11, zoom: -3 } },
             { name: "나눔로또봉평점", addr: "경남 통영시 도남로 81", panoId: 1204285725, pov: { pan: 15.6, tilt: 2.0, zoom: -1 } },
             { name: "천하명당", addr: "경기 시흥시 신천3길", panoId: 1175741916, pov: { pan: 335.65, tilt: 6.06, zoom: -2 } },
-            { name: "로터리복권방", addr: "부산 서구 자갈치로 4-1 1층", panoId: 1202119889, pov: { pan: 176.9, tilt: 2.3, zoom: 0 } },
+            { name: "로터리복권방", addr: "부산 서구 자갈치로 4-1 1층", panoid: 1202119889, pov: { pan: 175.81, tilt: 2.55, zoom: -1 } },
             { name: "천하명당복권방", addr: "경남 거제시 옥포성안로", panoId: 1204368030, pov: { pan: 96.19, tilt: 6.22, zoom: -1 } },
             { name: "신문가판점", addr: "서울 용산구 한강대로", panoId: 1197632086, pov: { pan: 256.46, tilt: 4.87, zoom: -3 } },
             { name: "대운", addr: "경기 김포시 대명항로", panoId: 1203824304, pov: { pan: 177.65, tilt: 9.98, zoom: 0 } },
@@ -2645,7 +2645,7 @@
             { name: "노다지복권방서정지점", addr: "경기 평택시 서정동 335-27", panoid: 1198305791, pov: { pan: 277.1, tilt: 2.9, zoom: 1 } },
             { name: "다드림복권", addr: "경기 김포시 월하로 930 1층 101호", panoid: 1203372471, pov: { pan: 231.20, tilt: 8.58, zoom: -3 } },
             { name: "당하복권명당", addr: "인천 서구 서곶로 788", panoid: 1199615169, pov: { pan: 68.28, tilt: 1.45, zoom: -3 } },
-            { name: "대박", addr: "경기 구리시 안골로103번길 46", panoid: 1203302213, pov: { pan: 342.05, tilt: 9.61, zoom: -3 } },
+            { name: "대박", addr: "경기 구리시 안골로103번길 46", panoid: 1203302213, pov: { pan: 356.83, tilt: 0.69, zoom: -1 } },
             { name: "대박로또판매점", addr: "경기 수원시 장안구 영화로 2129-1 인동", panoid: 1199673044, pov: { pan: 243.99, tilt: 0.39, zoom: -3 } },
             { name: "대박마트", addr: "충남 천안시 동남구 봉명동 494 봉명청솔아파트상가 103호", panoid: 1194827511, pov: { pan: 284.9, tilt: -5.5, zoom: 0 } },
             { name: "대박명당", addr: "경기 양주시 옥정동로5길 6", panoid: 1204022501, pov: { pan: 342.4, tilt: 3.8, zoom: 1 } },
@@ -2708,7 +2708,7 @@
             { name: "마이마트", addr: "인천 서구 심곡동 302 한국상가 제1층 101호", panoid: 1199391535, pov: { pan: 182.2, tilt: -3.9, zoom: 0 }, customMessage: "기존 '이마트(인천 심곡)' 명칭으로 알려진 1등 4회 대박 명당입니다." },
             { name: "메가마트", addr: "경기 시흥시 정왕대로 64 메가쇼핑몰 1층 123호", panoid: 1176237881, pov: { pan: 20.5, tilt: -1.3, zoom: 1 } },
             { name: "광성슈퍼", addr: "경기 이천시 단월로", panoid: 1175073795, pov: { pan: 281.59, tilt: 0.26, zoom: -3 } },
-            { name: "명성복권방", addr: "경기 화성시 진안동 525-58", panoid: 1198316660, pov: { pan: 190.1, tilt: -6.0, zoom: 1 } },
+            { name: "명성복권방", addr: "경기 화성시 경기대로 1043", panoid: 1198300197, pov: { pan: 207.00, tilt: -5.25, zoom: 3 } },
             { name: "명당마트", addr: "서울 강서구 양천로 91", panoid: 1198194653, pov: { pan: 58.67, tilt: 0.41, zoom: -3 } },
             { name: "명신사", addr: "서울 마포구 월드컵로 97", panoid: 1197543347, pov: { pan: 225.25, tilt: 6.55, zoom: -3 } },
             { name: "명진슈퍼", addr: "경기 의왕시 고천동 295-26", panoid: 1174117026, pov: { pan: 262.24, tilt: 5.16, zoom: -3 } },
@@ -2723,7 +2723,7 @@
             { name: "복권나라", addr: "강원 원주시 평원로 23 (학성동 23)", panoid: 1196398296, pov: { pan: 278.64, tilt: 8.80, zoom: -3 }, customMessage: "원주 학성동에서 총 6회의 1등 당첨을 배출한 전설적인 곳입니다." },
             { name: "복권나라", addr: "충북 증평군 증평읍 중앙로 15-3 (중동리 15-3)", panoid: 1184345935, pov: { pan: 306.63, tilt: 3.87, zoom: 1 }, customMessage: "증평읍 중동리에서 1등 5회를 배출하며 꾸준히 사랑받는 명당입니다." },
             { name: "복권나라", addr: "서울 성동구 용답중앙15길 12-1 (용답동 14-30)", panoid: 1198738844, pov: { pan: 109.2, tilt: 7.2, zoom: 0 }, customMessage: "기존 용답동 14-1번지(3회)에서 이전하여 총 5회 1등을 배출한 저력 있는 명당입니다." },
-            { name: "복권나라", addr: "전남 여수시 중앙로 62 (교동 448-2)", panoid: 1205476848, pov: { pan: 179.20, tilt: -0.44, zoom: 1 }, customMessage: "여수 중앙로의 터줏대감으로 지번/도로명 분산 기록을 포함하여 총 5회 1등이 당첨된 명당입니다." },
+            { name: "복권나라", addr: "전남 여수시 중앙로 62", panoid: 1205476848, pov: { pan: 182.73, tilt: 3.14, zoom: -1 } },
             { name: "복권나라", addr: "인천 서구 석남동 586-2", panoid: 1200085676, pov: { pan: 180.1, tilt: 2.3, zoom: 0 } },
             { name: "복권명당", addr: "경기 안성시 공도읍 승두길 62 (승두리 60-129)", panoid: 1176200480, pov: { pan: 171.58, tilt: 1.98, zoom: -1 }, customMessage: "지번/도로명 주소 분산 기록을 포함하여 총 4회 1등을 배출한 명당입니다." },
             { name: "복권명당", addr: "경북 경산시 경안로 214 (중방동 436-11)", panoid: 1187314576, pov: { pan: 30.42, tilt: 4.74, zoom: 2 } },
@@ -2848,6 +2848,11 @@
             { name: "해수로또", addr: "충북 청주시 상당구 산성로", panoId: 1168821889, pov: { pan: 87.7, tilt: -8.7, zoom: 0 } },
             { name: "행복미니슈퍼", addr: "경기 부천시 원미구", panoId: 1203727268, pov: { pan: 6.0, tilt: 2.8, zoom: 5 } },
             { name: "행복복권방", addr: "경남 창원시 의창구", panoId: 1205303190, pov: { pan: 306.09, tilt: 0.16, zoom: 2 } },
+            { name: "소답시내버스매표소", addr: "경남 창원시 의창구 의안로2번길 17 가판", panoid: 1204901032, pov: { pan: 343.63, tilt: -0.00, zoom: 1 } },
+            { name: "행운의집", addr: "서울 강동구 구천면로 222", panoid: 1198592857, pov: { pan: 133.80, tilt: 4.49, zoom: 1 } },
+            { name: "금집복권", addr: "광주 북구 첨단연신로108번길 134", panoid: 1200811114, pov: { pan: 87.22, tilt: -1.84, zoom: -1 } },
+            { name: "1등복권방", addr: "울산 울주군 동문길 84", panoid: 1201776500, pov: { pan: 254.00, tilt: 1.12, zoom: -1 } },
+            { name: "대동도기상사", addr: "경북 영천시 금완로 30", panoid: 1200482286, pov: { pan: 178.75, tilt: 12.90, zoom: -1 } },
             { name: "행운방", addr: "경기 용인시 기흥구 보정동", panoId: 1194380962, pov: { pan: 99.2, tilt: 3.0, zoom: -1 } },
             { name: "행운복권", addr: "충북 제천시 의림동", panoId: 1184953799, pov: { pan: 14.56, tilt: 5.01, zoom: 0 } },
             { name: "행운복권", addr: "경기 군포시 대야미동", panoId: 1175680167, pov: { pan: 302.4, tilt: 7.5, zoom: -1 } },
