--- a/index.html
+++ b/index.html
@@ -2560,11 +2560,11 @@
             { name: "진평양행", addr: "강원 강릉시 임영로", panoId: 1194087150, pov: { pan: 256.26, tilt: -4.05, zoom: -1 } },
             { name: "운좋은날", addr: "서울 강동구 풍성로", panoId: 1198599079, pov: { pan: 11.15, tilt: 3.08, zoom: -1 } },
             { name: "바이더웨이녹번중앙점", addr: "서울 은평구 녹번동", panoid: 1197941920, pov: { pan: 7.17, tilt: 4.71, zoom: 2 } },
-            { name: "포항오거리CU복권", addr: "경북 포항시 북구", panoId: 1187938840, pov: { pan: 54.87, tilt: 4.18, zoom: 0 } },
-            { name: "꾸미로또복권", addr: "서울 강북구 솔샘로67길", panoId: 1197848380, pov: { pan: 106.79, tilt: 4.54, zoom: 0 } },
+            { name: "포항오거리CU복권", addr: "경북 포항시 북구 죽도로 33", panoid: 1187942783, pov: { pan: 98.45, tilt: -3.21, zoom: -3 } },
+            { name: "꾸미로또복권", addr: "서울 강북구 솔샘로67길 118", panoid: 1197850243, pov: { pan: 140.19, tilt: 4.97, zoom: -3 } },
             { name: "복권전문점", addr: "경기 시흥시 중심상가로", panoId: 1176040872, pov: { pan: 38.81, tilt: 7.94, zoom: 0 } },
-            { name: "세븐복권방", addr: "경기 파주시 해올2길", panoId: 1203125573, pov: { pan: 331.01, tilt: 4.71, zoom: 0 } },
-            { name: "짱복권", addr: "서울 종로구 종로", panoId: 1197814790, pov: { pan: 1.03, tilt: 5.80, zoom: 0 } },
+            { name: "세븐복권방", addr: "경기 파주시 해올2길 16", panoid: 1203125581, pov: { pan: 349.39, tilt: -3.14, zoom: 2 } },
+            { name: "짱복권", addr: "서울 종로구 종로 269", panoid: 1197814790, pov: { pan: 0.65, tilt: -0.16, zoom: 2 } },
             { name: "행운복권방", addr: "경기 의정부시 충의로 55" },
             { name: "왕대박복권 (인더라인)", addr: "인천 부평구 십정동 577-6" },
             { name: "프렌드24시", addr: "광주 광산구 첨단중앙로", panoId: 1199708556, pov: { pan: 178.98, tilt: 7.22, zoom: 0 } },
@@ -2654,7 +2654,7 @@
             { name: "대박찬스", addr: "광주 북구 오치동 776-7", panoid: 1200654276, pov: { pan: 84.34, tilt: -1.70, zoom: -3 } },
             { name: "대박행진복권랜드", addr: "경기 파주시 금촌동 989-1 금촌프라자 107호", panoid: 1045548538, pov: { pan: 166.7, tilt: -1.1, zoom: 0 } },
             { name: "대야지복권", addr: "광주 남구 주월동 961-24", panoid: 1200569355, pov: { pan: 336.8, tilt: -0.3, zoom: 1 } },
-            { name: "대영당안경원", addr: "부산 동래구 수안동 232", panoid: 1202730682, pov: { pan: 274.80, tilt: -0.10, zoom: -3 } },
+            { name: "대영당안경원", addr: "부산 동래구 충렬대로237번길 9", panoid: 1202730682, pov: { pan: 292.71, tilt: 0.30, zoom: -3 } },
             { name: "대운복권", addr: "경기 성남시 중원구 성남대로 1149", panoid: 1199005721, pov: { pan: 247.83, tilt: 3.95, zoom: 1 } },
             { name: "대흥당", addr: "전북 정읍시 관통로 102", panoid: 1183542559, pov: { pan: 307.0, tilt: 0.9, zoom: 0 } },
             { name: "도깨비", addr: "경기 하남시 서하남로 136", panoid: 1173958844, pov: { pan: 178.97, tilt: 7.88, zoom: -3 } },
@@ -2709,7 +2709,7 @@
             { name: "메가마트", addr: "경기 시흥시 정왕대로 64 메가쇼핑몰 1층 123호", panoid: 1176237881, pov: { pan: 20.5, tilt: -1.3, zoom: 1 } },
             { name: "광성슈퍼", addr: "경기 이천시 단월로", panoid: 1175073795, pov: { pan: 281.59, tilt: 0.26, zoom: -3 } },
             { name: "명성복권방", addr: "경기 화성시 경기대로 1043", panoid: 1198300197, pov: { pan: 207.00, tilt: -5.25, zoom: 3 } },
-            { name: "명당마트", addr: "서울 강서구 양천로 91", panoid: 1198194653, pov: { pan: 58.67, tilt: 0.41, zoom: -3 } },
+            { name: "명당마트", addr: "서울 강서구 양천로 91", panoid: 1198194653, pov: { pan: 70.47, tilt: -2.31, zoom: -3 } },
             { name: "명신사", addr: "서울 마포구 월드컵로 97", panoid: 1197543347, pov: { pan: 225.25, tilt: 6.55, zoom: -3 } },
             { name: "명진슈퍼", addr: "경기 의왕시 고천동 295-26", panoid: 1174117026, pov: { pan: 262.24, tilt: 5.16, zoom: -3 } },
             { name: "매물도복권점", addr: "경남 통영시 통영해안로 225-1 (서호동 177-336)", panoid: 1204407783, pov: { pan: 347.4, tilt: 5.4, zoom: 4 }, customMessage: "기존 '바다로또방(1등 3회)'의 당첨 기운을 이어받아 통합 운영 중인 명당입니다." },
@@ -2732,7 +2732,7 @@
             { name: "복권방", addr: "서울 구로구 구로동 409-80 (구로동로35길 6)", panoid: 1198456741, pov: { pan: 299.0, tilt: 3.0, zoom: 3 }, isClosed: true, customMessage: "과거 1등을 3회 배출했으나 현재는 폐점된 매장입니다." },
             { name: "복권방", addr: "경기 하남시 신장로 122", panoid: 1173490651, pov: { pan: 27.4, tilt: -6.5, zoom: 0 }, customMessage: "하남 신장동의 대표 명당으로, 인근 폐점된 지점(2회)과 합산하여 총 6회 1등을 배출한 저력 있는 곳입니다. LG U+ 매장 내에 위치하고 있습니다." },
             { name: "복권방", addr: "강원 원주시 관설동 1702-1", panoid: 1195742103, pov: { pan: 136.5, tilt: 1.6, zoom: 0 } },
-            { name: "복권백화점", addr: "경기 여주시 여흥로 115 (홍문동 207-9)", panoid: 1174873101, pov: { pan: 119.17, tilt: 2.34, zoom: -1 } },
+            { name: "복권백화점", addr: "경기 여주시 세종로 41", panoid: 1174873101, pov: { pan: 132.31, tilt: 2.55, zoom: 2 } },
             { name: "복권사랑", addr: "경기 양주시 평화로 1421 (덕계동 462-2)", panoid: 1204107039, pov: { pan: 112.71, tilt: 1.11, zoom: 1 } },
             { name: "복권전문점", addr: "대전 유성구 계룡로 132번길 10 (봉명동 568-4)", panoid: 1201068426, pov: { pan: 205.90, tilt: 4.45, zoom: -3 } },
             { name: "복권천국", addr: "부산 서구 구덕로 207-1 (부민동2가 10-8)", panoid: 1202160948, pov: { pan: 215.57, tilt: 6.67, zoom: 0 } },
@@ -2853,6 +2853,8 @@
             { name: "금집복권", addr: "광주 북구 첨단연신로108번길 134", panoid: 1200811114, pov: { pan: 87.22, tilt: -1.84, zoom: -1 } },
             { name: "1등복권방", addr: "울산 울주군 동문길 84", panoid: 1201776500, pov: { pan: 254.00, tilt: 1.12, zoom: -1 } },
             { name: "대동도기상사", addr: "경북 영천시 금완로 30", panoid: 1200482286, pov: { pan: 178.75, tilt: 12.90, zoom: -1 } },
+            { name: "행운을주는로또판매점", addr: "경기 안산시 단원구 초지로 90", panoid: 1204019935, pov: { pan: 93.36, tilt: -0.99, zoom: 3 } },
+            { name: "나눔로또 판교역점", addr: "경기 성남시 분당구 대왕판교로606번길 39", panoid: 1199366275, pov: { pan: 355.75, tilt: -3.62, zoom: 1 }, customMessage: "건물 내부에 매장이 있습니다" },
             { name: "행운방", addr: "경기 용인시 기흥구 보정동", panoId: 1194380962, pov: { pan: 99.2, tilt: 3.0, zoom: -1 } },
             { name: "행운복권", addr: "충북 제천시 의림동", panoId: 1184953799, pov: { pan: 14.56, tilt: 5.01, zoom: 0 } },
             { name: "행운복권", addr: "경기 군포시 대야미동", panoId: 1175680167, pov: { pan: 302.4, tilt: 7.5, zoom: -1 } },
