--- a/index.html
+++ b/index.html
@@ -2721,7 +2721,7 @@
             { name: "복권", addr: "경기 의정부시 태평로 75", panoid: 1174093159, pov: { pan: 277.0, tilt: 0.0, zoom: 0 } },
             { name: "복권나라", addr: "경북 포항시 북구 죽도동 140-9 (죽도로 9)", panoid: 1187494212, pov: { pan: 348.69, tilt: 12.87, zoom: -3 }, customMessage: "포항 죽도동의 명실상부한 1등 3회 배출 명당입니다." },
             { name: "복권나라", addr: "강원 원주시 평원로 23 (학성동 23)", panoid: 1196398296, pov: { pan: 278.64, tilt: 8.80, zoom: -3 }, customMessage: "원주 학성동에서 총 6회의 1등 당첨을 배출한 전설적인 곳입니다." },
-            { name: "복권나라", addr: "충북 증평군 증평읍 중앙로 15-3 (중동리 15-3)", panoid: 1184345935, pov: { pan: 306.63, tilt: 3.87, zoom: 1 }, customMessage: "증평읍 중동리에서 1등 5회를 배출하며 꾸준히 사랑받는 명당입니다." },
+            { name: "복권나라", addr: "충북 증평군 증평읍 중앙로 15-3 (중동리 15-3)", panoid: 1184345935, pov: { pan: 303.17, tilt: -2.56, zoom: 1 } },
             { name: "복권나라", addr: "서울 성동구 용답중앙15길 12-1 (용답동 14-30)", panoid: 1198738844, pov: { pan: 109.2, tilt: 7.2, zoom: 0 }, customMessage: "기존 용답동 14-1번지(3회)에서 이전하여 총 5회 1등을 배출한 저력 있는 명당입니다." },
             { name: "복권나라", addr: "전남 여수시 중앙로 62", panoid: 1205476848, pov: { pan: 182.73, tilt: 3.14, zoom: -1 } },
             { name: "복권나라", addr: "인천 서구 석남동 586-2", panoid: 1200085676, pov: { pan: 180.1, tilt: 2.3, zoom: 0 } },
@@ -2855,6 +2855,7 @@
             { name: "대동도기상사", addr: "경북 영천시 금완로 30", panoid: 1200482286, pov: { pan: 178.75, tilt: 12.90, zoom: -1 } },
             { name: "행운을주는로또판매점", addr: "경기 안산시 단원구 초지로 90", panoid: 1204019935, pov: { pan: 93.36, tilt: -0.99, zoom: 3 } },
             { name: "나눔로또 판교역점", addr: "경기 성남시 분당구 대왕판교로606번길 39", panoid: 1199366275, pov: { pan: 355.75, tilt: -3.62, zoom: 1 }, customMessage: "건물 내부에 매장이 있습니다" },
+            { name: "복권왕국", addr: "전남 여수시 여수산단로 48 1층101호", panoid: 1205610765, pov: { pan: 114.04, tilt: 0.85, zoom: 1 } },
             { name: "행운방", addr: "경기 용인시 기흥구 보정동", panoId: 1194380962, pov: { pan: 99.2, tilt: 3.0, zoom: -1 } },
             { name: "행운복권", addr: "충북 제천시 의림동", panoId: 1184953799, pov: { pan: 14.56, tilt: 5.01, zoom: 0 } },
             { name: "행운복권", addr: "경기 군포시 대야미동", panoId: 1175680167, pov: { pan: 302.4, tilt: 7.5, zoom: -1 } },
