--- a/index.html
+++ b/index.html
@@ -2567,7 +2567,7 @@
             { name: "짱복권", addr: "서울 종로구 종로 269", panoid: 1197814790, pov: { pan: 0.65, tilt: -0.16, zoom: 2 } },
             { name: "행운복권방", addr: "경기 의정부시 충의로 55" },
             { name: "왕대박복권 (인더라인)", addr: "인천 부평구 십정동 577-6" },
-            { name: "프렌드24시", addr: "광주 광산구 첨단중앙로", panoId: 1199708556, pov: { pan: 178.98, tilt: 7.22, zoom: 0 } },
+            { name: "프렌드24시", addr: "광주 광산구 첨단중앙로 164", panoid: 1199708554, pov: { pan: 171.41, tilt: -6.19, zoom: 1 } },
             { name: "알리바이금당점", addr: "전남 순천시 대석길", panoId: 1173674879, pov: { pan: 359.32, tilt: 3.55, zoom: -2 } },
             { name: "해뜰날", addr: "경기 동두천시 중앙로", panoId: 1175647022, pov: { pan: 167.43, tilt: 0.87, zoom: 0 } },
             { name: "노다지복권방", addr: "경기 용인시 처인구 마평동 735-1", panoId: 1198953144, pov: { pan: 126.6, tilt: 2.2, zoom: 2 } },
@@ -2720,7 +2720,7 @@
             { name: "보경식품", addr: "서울 강북구 미아동 207-2", panoid: 1197862462, pov: { pan: 249.90, tilt: 1.60, zoom: -1 } },
             { name: "복권", addr: "경기 의정부시 태평로 75", panoid: 1174093159, pov: { pan: 277.0, tilt: 0.0, zoom: 0 } },
             { name: "복권나라", addr: "경북 포항시 북구 죽도동 140-9 (죽도로 9)", panoid: 1187494212, pov: { pan: 348.69, tilt: 12.87, zoom: -3 }, customMessage: "포항 죽도동의 명실상부한 1등 3회 배출 명당입니다." },
-            { name: "복권나라", addr: "강원 원주시 평원로 23 (학성동 23)", panoid: 1196398296, pov: { pan: 278.64, tilt: 8.80, zoom: -3 }, customMessage: "원주 학성동에서 총 6회의 1등 당첨을 배출한 전설적인 곳입니다." },
+            { name: "복권나라", addr: "강원 원주시 평원로 23", panoid: 1196398296, pov: { pan: 277.97, tilt: 0.34, zoom: 0 } },
             { name: "복권나라", addr: "충북 증평군 증평읍 중앙로 15-3 (중동리 15-3)", panoid: 1184345935, pov: { pan: 303.17, tilt: -2.56, zoom: 1 } },
             { name: "복권나라", addr: "서울 성동구 용답중앙15길 12-1 (용답동 14-30)", panoid: 1198738844, pov: { pan: 109.2, tilt: 7.2, zoom: 0 }, customMessage: "기존 용답동 14-1번지(3회)에서 이전하여 총 5회 1등을 배출한 저력 있는 명당입니다." },
             { name: "복권나라", addr: "전남 여수시 중앙로 62", panoid: 1205476848, pov: { pan: 182.73, tilt: 3.14, zoom: -1 } },
@@ -2845,7 +2845,22 @@
             { name: "하늘과바다", addr: "인천 부평구 부개동", panoId: 1199223112, pov: { pan: 0.36, tilt: -0.01, zoom: -2 } },
             { name: "하당복권방", addr: "전남 목포시 옥암동", panoId: 1192600420, pov: { pan: 304.76, tilt: 1.45, zoom: -3 } },
             { name: "하영", addr: "인천 서구 청라에메랄드로", panoId: 1199762293, pov: { pan: 254.5, tilt: -13.8, zoom: 1 } },
-            { name: "해수로또", addr: "충북 청주시 상당구 산성로", panoId: 1168821889, pov: { pan: 87.7, tilt: -8.7, zoom: 0 } },
+            { name: "해수로또", addr: "충북 청주시 상당구 산성로", panoid: 1168821889, pov: { pan: 87.7, tilt: -8.7, zoom: 0 } },
+            { name: "행운방", addr: "경기 용인시 기흥구 보정동", panoid: 1194380962, pov: { pan: 99.2, tilt: 3.0, zoom: -1 } },
+            { name: "행운복권", addr: "충북 제천시 의림동", panoid: 1184953799, pov: { pan: 14.56, tilt: 5.01, zoom: 0 } },
+            { name: "행운복권", addr: "경기 군포시 대야미동", panoid: 1175680167, pov: { pan: 302.4, tilt: 7.5, zoom: -1 } },
+            { name: "행운복권방", addr: "부산 중구 남포동5가", panoId: 1202742263, pov: { pan: 162.33, tilt: -1.85, zoom: -2 } },
+            { name: "행운복권방", addr: "경기 의정부시 용현동", panoId: 1174558837, pov: { pan: 255.27, tilt: -1.13, zoom: -3 } },
+            { name: "행운복권방", addr: "강원 인제군 북면", panoId: 1196203792, pov: { pan: 216.8, tilt: -5.2, zoom: 0 } },
+            { name: "행운을주는사람들", addr: "충북 충주시 연수동", panoid: 1165060593, pov: { pan: 232.92, tilt: 3.33, zoom: -3 } },
+            { name: "형제상회", addr: "대전 서구 용문동", panoId: 1201235032, pov: { pan: 231.57, tilt: 11.75, zoom: -3 } },
+            { name: "현대사", addr: "경기 성남시 분당구 구미동 144-1 102호", panoId: 1199011246, pov: { pan: 359.56, tilt: 1.25, zoom: -3 } },
+            { name: "행운복권방", addr: "서울 도봉구 창동", panoId: 1197759123, pov: { pan: 334.7, tilt: -0.9, zoom: 0 } },
+            { name: "천하명당초량점", addr: "부산 동구 중앙대로221번길 3", panoid: 1202441096, pov: { pan: 189.21, tilt: 7.73, zoom: -3 } },
+            { name: "선경로또", addr: "충북 제천시용두대로 59", panoid: 1185117093, pov: { pan: 309.50, tilt: -2.42, zoom: 1 } },
+            { name: "바로전산", addr: "경기 광명시 오리로 1000", panoid: 1203338330, pov: { pan: 20.22, tilt: 0.87, zoom: 1 } },
+            { name: "가로판매점", addr: "서울 금천구 시흥대로 480 가판", panoid: 1198112467, pov: { pan: 47.89, tilt: 1.89, zoom: 2 } },
+            { name: "행운복권", addr: "경북 구미시 야은로 763", panoid: 1166471666, pov: { pan: 11.23, tilt: 2.02, zoom: 0 } },
             { name: "행복미니슈퍼", addr: "경기 부천시 원미구", panoId: 1203727268, pov: { pan: 6.0, tilt: 2.8, zoom: 5 } },
             { name: "행복복권방", addr: "경남 창원시 의창구", panoId: 1205303190, pov: { pan: 306.09, tilt: 0.16, zoom: 2 } },
             { name: "소답시내버스매표소", addr: "경남 창원시 의창구 의안로2번길 17 가판", panoid: 1204901032, pov: { pan: 343.63, tilt: -0.00, zoom: 1 } },
@@ -2856,6 +2871,13 @@
             { name: "행운을주는로또판매점", addr: "경기 안산시 단원구 초지로 90", panoid: 1204019935, pov: { pan: 93.36, tilt: -0.99, zoom: 3 } },
             { name: "나눔로또 판교역점", addr: "경기 성남시 분당구 대왕판교로606번길 39", panoid: 1199366275, pov: { pan: 355.75, tilt: -3.62, zoom: 1 }, customMessage: "건물 내부에 매장이 있습니다" },
             { name: "복권왕국", addr: "전남 여수시 여수산단로 48 1층101호", panoid: 1205610765, pov: { pan: 114.04, tilt: 0.85, zoom: 1 } },
+            { name: "청룡마트", addr: "충남 천안시 동남구 풍세로 1010-31", panoid: 1194562374, pov: { pan: 134.12, tilt: 4.56, zoom: 1 } },
+            { name: "돈벼락맞는곳", addr: "경남 김해시 김해대로 2793", panoid: 1194076312, pov: { pan: 42.87, tilt: 3.36, zoom: 2 } },
+            { name: "남평로또점", addr: "전남 나주시 남평1로 12", panoid: 1191039911, pov: { pan: 186.94, tilt: 4.05, zoom: 1 } },
+            { name: "불국사명당복권", addr: "경북 경주시 산업로 3033", panoid: 1187507967, pov: { pan: 229.11, tilt: -4.51, zoom: 1 } },
+            { name: "잘찍어로또방", addr: "경기 평택시 안현로서5길 62", panoid: 1197880799, pov: { pan: 114.08, tilt: -4.66, zoom: 1 } },
+            { name: "로또복권판매도통점", addr: "전북 남원시 용성로 232", panoid: 1181200294, pov: { pan: 253.83, tilt: 0.40, zoom: 1 } },
+            { name: "해뜰날", addr: "경기 동두천시 중앙로 134-30", panoid: 1175647022, pov: { pan: 173.89, tilt: 2.93, zoom: 1 } },
             { name: "행운방", addr: "경기 용인시 기흥구 보정동", panoId: 1194380962, pov: { pan: 99.2, tilt: 3.0, zoom: -1 } },
             { name: "행운복권", addr: "충북 제천시 의림동", panoId: 1184953799, pov: { pan: 14.56, tilt: 5.01, zoom: 0 } },
             { name: "행운복권", addr: "경기 군포시 대야미동", panoId: 1175680167, pov: { pan: 302.4, tilt: 7.5, zoom: -1 } },
