--- a/index.html
+++ b/index.html
@@ -360,6 +360,15 @@
             .omr-modal-content {
                 max-height: 65vh;
             }
+
+            .ai-modal-content {
+                width: 95%;
+                padding: 25px 20px;
+                max-height: 85vh;
+                /* Increased from 60vh to fit all options */
+                overflow-y: auto;
+                /* Enable scrolling if still needed */
+            }
         }
 
         /* Zodiac Grid Styles */
@@ -2501,8 +2510,8 @@
             { name: "묵동식품", addr: "서울 중랑구 묵동 238-11", panoId: 1198447963, pov: { pan: 268.85, tilt: 2.27, zoom: 3 } },
             { name: "목화휴게소", addr: "경남 사천시 용현면", panoId: 1188432049, pov: { pan: 103.75, tilt: 8.02, zoom: 1 } },
             { name: "목화휴게소", addr: "경남 사천시 사천대로 912", panoId: 1188272977, pov: { pan: 34.24, tilt: 0.74, zoom: 0 } },
-            { name: "복권백화점", addr: "경기 파주시 평화로", panoId: 1202862935, pov: { pan: 48.22, tilt: 2.81, zoom: 1 } },
-            { name: "복권백화점(대백.한라앞)", addr: "대구 달서구 이곡동", panoId: 1201505680, pov: { pan: 341.21, tilt: 4.46, zoom: 0 } },
+            { name: "복권백화점", addr: "경기 파주시 평화로", panoid: 1202862935, pov: { pan: 48.22, tilt: 2.81, zoom: 1 } },
+            { name: "복권백화점(대백.한라앞)", addr: "대구 달서구 이곡동", panoid: 1201505680, pov: { pan: 341.21, tilt: 4.46, zoom: 0 } },
             { name: "영화유통(1등복권방)", addr: "울산 남구 신정로", panoId: 1202168610, pov: { pan: 262.28, tilt: 6.84, zoom: -3 } },
             { name: "종합복권슈퍼", addr: "경기 시흥시 마유로", panoId: 1175858045, pov: { pan: 129.49, tilt: 4.68, zoom: 3 } },
             { name: "한꿈복권방", addr: "울산 중구 번영로", panoId: 1202017794, pov: { pan: 168.99, tilt: -1.41, zoom: 3 } },
@@ -2565,8 +2574,8 @@
             { name: "복권전문점", addr: "경기 시흥시 중심상가로", panoId: 1176040872, pov: { pan: 38.81, tilt: 7.94, zoom: 0 } },
             { name: "세븐복권방", addr: "경기 파주시 해올2길 16", panoid: 1203125581, pov: { pan: 349.39, tilt: -3.14, zoom: 2 } },
             { name: "짱복권", addr: "서울 종로구 종로 269", panoid: 1197814790, pov: { pan: 0.65, tilt: -0.16, zoom: 2 } },
-            { name: "행운복권방", addr: "경기 의정부시 충의로 55" },
-            { name: "왕대박복권 (인더라인)", addr: "인천 부평구 십정동 577-6" },
+            { name: "행운복권방", addr: "경기 의정부시 충의로 55", panoId: 1174093159, pov: { pan: 277.0, tilt: 0.0, zoom: 0 } },
+            { name: "왕대박복권 (인더라인)", addr: "인천 부평구 십정동 577-6", panoId: 1203625174, pov: { pan: 190.23, tilt: -5.06, zoom: -3 } },
             { name: "프렌드24시", addr: "광주 광산구 첨단중앙로 164", panoid: 1199708554, pov: { pan: 171.41, tilt: -6.19, zoom: 1 } },
             { name: "알리바이금당점", addr: "전남 순천시 대석길", panoId: 1173674879, pov: { pan: 359.32, tilt: 3.55, zoom: -2 } },
             { name: "해뜰날", addr: "경기 동두천시 중앙로", panoId: 1175647022, pov: { pan: 167.43, tilt: 0.87, zoom: 0 } },
@@ -2611,7 +2620,7 @@
             { name: "LG슈퍼", addr: "경기 광명시 철산동", panoid: 1203337015, pov: { pan: 49.06, tilt: 1.76, zoom: -3 } },
             { name: "SK@24시편의점", addr: "경기 파주시 아동동 589-10", isClosed: true, customMessage: "현재 폐점된 매장입니다." },
             { name: "GS25(안산산호)", addr: "경기 안산시 단원구 선부동 1081산호한양상가101호", imageUrl: "assets/img/GS 안산산호점_260214.jpg", customMessage: "산호한양상가 1층에 위치한 GS25 편의점입니다." },
-            { name: "가판", addr: "서울 마포구 도화2동 169 고려2 앞가판", isClosed: true, customMessage: "현재 폐점되었습니다. (가든호텔정문옆가판으로 이전 확인)" },
+            { name: "가판", addr: "서울 마포구 도화2동 169 고려2 앞가판", isClosed: true, customMessage: "현재 폐점되었습니다 (가든호텔정문옆가판으로 이전 확인)" },
             { name: "가판 창동역점", addr: "서울 도봉구 창동 3-3 창동역문화마당앞", isClosed: true, customMessage: "현재 해당 위치의 가로판매대는 폐점되었거나 이전되었습니다." },
             { name: "가판점", addr: "서울 서초구 서초동(서초3동) 1602-2 가판", isClosed: true, customMessage: "현재 폐점된 가판대입니다." },
             { name: "가로가판대", addr: "서울 관악구 신림동(조원동) 1643-6" },
@@ -2767,7 +2776,7 @@
             { name: "금강종합공구", addr: "경기 김포시 대곶면", panoId: 1203805177, pov: { pan: 152.44, tilt: 6.16, zoom: 1 } },
             { name: "금곡로", addr: "경기 수원시 권선구", panoId: 1199869934, pov: { pan: 223.14, tilt: -10.18, zoom: 1 } },
             { name: "김포로또", addr: "경기 김포시 사우동", panoId: 1203803036, pov: { pan: 30.03, tilt: 0.32, zoom: 1 } },
-            { name: "나눔이매로또", addr: "경기 성남시 분당구", panoId: 1199105927, pov: { pan: 352.81, tilt: 3.21, zoom: -2 } },
+            { name: "나눔로또 판교역점", addr: "경기 성남시 분당구 대왕판교로606번길 39", panoid: 1199366275, pov: { pan: 355.75, tilt: -3.62, zoom: 1 }, customMessage: "건물 내부에 매장이 있습니다" },
             { name: "노다지복권", addr: "강원 횡성군 문정로", panoId: 1197181543, pov: { pan: 217.60, tilt: 1.34, zoom: -1 } },
             { name: "다모아복권", addr: "서울 구로구 오류동", panoId: 1198581650, pov: { pan: 54.87, tilt: 2.77, zoom: -3 } },
             { name: "다모아복권방", addr: "서울 구로구 오류동", panoId: 1198548447, pov: { pan: 256.07, tilt: 0.72, zoom: -3 } },
