--- a/index.html
+++ b/index.html
@@ -2580,12 +2580,12 @@
             { name: "알리바이금당점", addr: "전남 순천시 대석길", panoId: 1173674879, pov: { pan: 359.32, tilt: 3.55, zoom: -2 } },
             { name: "해뜰날", addr: "경기 동두천시 중앙로", panoId: 1175647022, pov: { pan: 167.43, tilt: 0.87, zoom: 0 } },
             { name: "노다지복권방", addr: "경기 용인시 처인구 마평동 735-1", panoId: 1198953144, pov: { pan: 126.6, tilt: 2.2, zoom: 2 } },
-            { name: "GS25(계산동경점)", addr: "인천 계양구 계산동", panoId: 1199190145, pov: { pan: 312.16, tilt: -5.08, zoom: 0 } },
+            { name: "GS25(계산동경점)", addr: "인천 계양구 계산동", panoid: 1199151424, pov: { pan: 353.80, tilt: -2.31, zoom: -2 } },
             { name: "창원병원앞매표소", addr: "경남 창원시 성산구", panoid: 1204481691, pov: { pan: 36.51, tilt: 4.43, zoom: 2 } },
             { name: "역전광장상회", addr: "경기 파주시 금촌1동 329-19", panoId: 1203271882, pov: { pan: 332.7, tilt: 5.0, zoom: 0 } },
             { name: "대광복권방", addr: "전남 화순군 화순읍 대리 97-3", panoId: 1192902741, pov: { pan: 339.4, tilt: 4.4, zoom: 0 } },
             { name: "명당골복권방", addr: "경기 수원시 권선구", panoId: 1199751659, pov: { pan: 187.22, tilt: 5.79, zoom: -3 } },
-            { name: "다터져복권방", addr: "경기 평택시 합정동", panoId: 1197642715, pov: { pan: 281.72, tilt: 0.44, zoom: -3 } },
+            { name: "다터져복권방", addr: "경기 평택시 합정동", panoid: 1197642715, pov: { pan: 284.10, tilt: 1.67, zoom: -3 } },
             { name: "행운의집", addr: "경북 안동시 북문동 23-7", isClosed: true, customMessage: "현재는 폐업상태의 점포입니다" },
             { name: "지원물산", addr: "서울 노원구 공릉동", panoId: 1198350307, pov: { pan: 61.24, tilt: -1.90, zoom: -3 } },
             { name: "데이션나잇", addr: "서울 성북구 종암동 132", panoId: 1198236406, pov: { pan: 52.6, tilt: 10.3, zoom: 0 } },
@@ -2598,7 +2598,7 @@
             { name: "로또복권방", addr: "경기 용인시 처인구", panoId: 1199530907, pov: { pan: 306.53, tilt: 1.09, zoom: 0 } },
             { name: "버스판매소", addr: "서울 영등포구 영등포동4가 441-10", panoId: 1198368804, pov: { pan: 64.0, tilt: 0.9, zoom: 0 } },
             { name: "GS25(양산문성)", addr: "경남 양산시 평산동 31-5", panoId: 1204592950, pov: { pan: 269.6, tilt: 1.0, zoom: 1 } },
-            { name: "우리들공업탑점", addr: "울산 남구 신정동 1233-3", isClosed: true, customMessage: "과거 '영화유통'으로 불리며 1등 당첨자를 10회 이상 배출한 유명 명당이었으나, 현재는 점주 별세 및 자격 문제로 인해 폐업 상태입니다." },
+            { name: "우리들공업탑점", addr: "울산 남구 신정동", panoid: 1201811174, pov: { pan: 25.20, tilt: 4.52, zoom: 2 } },
             { name: "메트로센터점", addr: "대구 중구 덕산동 88 (달구벌대로 지하 2100) C412호", imageUrl: "assets/img/metro_260213.jpg", customMessage: "반월당역 지하상가(C412호) 중심부에 위치하고 있습니다. (기존 4회 + 로드명주소 5회 합산 총 9회 당첨)" },
             { name: "행복한사람들(흥부네)", addr: "경기 광주시 경충대로 763 (초월읍 산이리 13-1)", imageUrl: "assets/img/happypeople_260213.jpg", customMessage: "이 점포는 도로 인접성 문제로 로드뷰 제공이 어려워 현장 사진으로 대체합니다. (기존 1회 + 도로명주소 5회 합산 총 6회 당첨)" },
             { name: "인터넷 복권판매사이트", addr: "서울특별시 서초구 남부순환로", customLink: "https://www.dhlottery.co.kr/userGuide", customMessage: "동 판매점은 온라인 구매가능한 동행복권 싸이트로 연결드립니다." },
@@ -2786,7 +2786,7 @@
             { name: "대원슈퍼마켓", addr: "부산 수영구 광안2동", panoId: 1202817759, pov: { pan: 102.41, tilt: 4.05, zoom: -3 } },
             { name: "돈벼락맞는곳", addr: "부산 기장군 읍내로", panoId: 1162339595, pov: { pan: 354.91, tilt: -2.05, zoom: -3 } },
             { name: "동원복권", addr: "경남 양산시 북정동", panoId: 1204826032, pov: { pan: 118.64, tilt: 0.81, zoom: -3 } },
-            { name: "드림", addr: "경기 수원시 권선구 세류동", panoId: 1200109952, pov: { pan: 296.4, tilt: 8.3, zoom: 0 } },
+            { name: "드림", addr: "경기 수원시 권선구", panoid: 1200109952, pov: { pan: 311.37, tilt: 0.30, zoom: 0 } },
             { name: "드림마트", addr: "인천 서구 검단로", panoId: 1198835640, pov: { pan: 148.68, tilt: 2.64, zoom: -3 } },
             { name: "로또", addr: "경기 포천시 죽엽산로196번길", panoId: 1175927131, pov: { pan: 316.68, tilt: -1.36, zoom: -3 } },
             { name: "로또(파발마점)", addr: "경기 시흥시 정왕동", panoId: 1175870702, pov: { pan: 114.75, tilt: -1.36, zoom: -3 } },
@@ -2901,6 +2901,8 @@
             { name: "선경로또", addr: "충북 제천시용두대로 59", panoid: 1185117093, pov: { pan: 309.50, tilt: -2.42, zoom: 1 } },
             { name: "바로전산", addr: "경기 광명시 오리로 1000", panoid: 1203338330, pov: { pan: 20.22, tilt: 0.87, zoom: 1 } },
             { name: "가로판매점", addr: "서울 금천구 시흥대로 480 가판", panoid: 1198112467, pov: { pan: 47.89, tilt: 1.89, zoom: 2 } },
+            { name: "포시즌마전점", addr: "인천 서구 완정로10번길", panoid: 1199590585, pov: { pan: 103.21, tilt: 1.73, zoom: -3 } },
+            { name: "로또판매점", addr: "경기 고양시 일산동구", panoid: 1203808276, pov: { pan: 156.30, tilt: 1.44, zoom: -1 }, customMessage: "건물 내부에 매장이 있습니다" },
         ];
 
 
