Stage Batch 58: Register Bokkwon Nara (Seongdong-gu)

--- a/index.html
+++ b/index.html
@@ -2731,7 +2731,7 @@
             { name: "복권나라", addr: "경북 포항시 북구 죽도동 140-9 (죽도로 9)", panoid: 1187494212, pov: { pan: 348.69, tilt: 12.87, zoom: -3 }, customMessage: "포항 죽도동의 명실상부한 1등 3회 배출 명당입니다." },
             { name: "복권나라", addr: "강원 원주시 평원로 23", panoid: 1196398296, pov: { pan: 277.97, tilt: 0.34, zoom: 0 } },
             { name: "복권나라", addr: "충북 증평군 증평읍 중앙로 15-3 (중동리 15-3)", panoid: 1184345935, pov: { pan: 303.17, tilt: -2.56, zoom: 1 } },
-            { name: "복권나라", addr: "서울 성동구 용답중앙15길 12-1 (용답동 14-30)", panoid: 1198738844, pov: { pan: 109.2, tilt: 7.2, zoom: 0 }, customMessage: "기존 용답동 14-1번지(3회)에서 이전하여 총 5회 1등을 배출한 저력 있는 명당입니다." },
+            { name: "복권나라", addr: "서울 성동구 용답중앙15길", panoid: 1198738844, pov: { pan: 125.91, tilt: 5.76, zoom: -1 }, customMessage: "기존 용답동 14-1번지(3회)에서 이전하여 총 5회 1등을 배출한 저력 있는 명당입니다." },
             { name: "복권나라", addr: "전남 여수시 중앙로 62", panoid: 1205476848, pov: { pan: 182.73, tilt: 3.14, zoom: -1 } },
             { name: "복권나라", addr: "인천 서구 석남동 586-2", panoid: 1200085676, pov: { pan: 180.1, tilt: 2.3, zoom: 0 } },
             { name: "복권명당", addr: "경기 안성시 공도읍 승두길 62 (승두리 60-129)", panoid: 1176200480, pov: { pan: 171.58, tilt: 1.98, zoom: -1 }, customMessage: "지번/도로명 주소 분산 기록을 포함하여 총 4회 1등을 배출한 명당입니다." },
