Deploy Batch 61: Rename Bokkwonbang to CU Wonju Gwanseol Branch

--- a/index.html
+++ b/index.html
@@ -2744,7 +2744,7 @@
             { name: "복권방", addr: "경기 수원시 팔달구 인계로 213 (인계동 1037-2)", panoid: 1199811682, pov: { pan: 176.89, tilt: 1.16, zoom: -2 }, customMessage: "지번/도로명 주소 분산 기록을 포함하여 총 4회 1등을 배출한 인계동 명당입니다." },
             { name: "복권방", addr: "서울 구로구 구로동 409-80 (구로동로35길 6)", panoid: 1198456741, pov: { pan: 299.0, tilt: 3.0, zoom: 3 }, isClosed: true, customMessage: "과거 1등을 3회 배출했으나 현재는 폐점된 매장입니다." },
             { name: "복권방", addr: "경기 하남시 신장로 122", panoid: 1173490651, pov: { pan: 27.4, tilt: -6.5, zoom: 0 }, customMessage: "하남 신장동의 대표 명당으로, 인근 폐점된 지점(2회)과 합산하여 총 6회 1등을 배출한 저력 있는 곳입니다. LG U+ 매장 내에 위치하고 있습니다." },
-            { name: "복권방", addr: "강원 원주시 관설동 1702-1", panoid: 1195742103, pov: { pan: 136.5, tilt: 1.6, zoom: 0 } },
+            { name: "CU 원주관설점", addr: "강원 원주시 관설동 1702-1 (나비허리길 160)", panoid: 1195742104, pov: { pan: 172.47, tilt: 3.39, zoom: -3 }, customMessage: "기존 '복권방'의 당첨 이력을 승계하여 운영 중인 편의점 명당입니다." },
             { name: "복권백화점", addr: "경기 여주시 세종로 41", panoid: 1174873101, pov: { pan: 132.31, tilt: 2.55, zoom: 2 } },
             { name: "복권사랑", addr: "경기 양주시 평화로 1421 (덕계동 462-2)", panoid: 1204107039, pov: { pan: 112.71, tilt: 1.11, zoom: 1 } },
             { name: "복권전문점", addr: "대전 유성구 계룡로 132번길 10 (봉명동 568-4)", panoid: 1201068426, pov: { pan: 205.90, tilt: 4.45, zoom: -3 } },
